# lidar-viewer

./: .gitignore  CMakeLists.txt  README.md
Code/: README
Code/MATLAB/: convert_to_csv.m  db.xml  display_3D_pointcloud.m  display_multiple_3D_scans_intensity.m  hdl_loaddb.m  hdl_newloaddb.m  hdl_player.m  intensity_calibration.conf  test_pose.m  xml_help.p  xml_parseany.p
Code/MATLAB/create_ijrr_utils/: create_ijrr_dataset.m  findcind.m  motion_compensate_scan.m  scan2world.m  scan_xyzrgb.m
Code/MATLAB/create_ijrr_utils/Multiprod-3/: loc2loc.m  matexp.m  testMULTIPROD.m
Code/MATLAB/create_ijrr_utils/Multiprod-3/.svn/: entries
Code/MATLAB/create_ijrr_utils/Multiprod-3/.svn/text-base/: multiprod.m.svn-base  multitransp.m.svn-base
Code/MATLAB/xmltools/: xmltools.m
data/: preprocessing.ipynb  scans-backup.json
data/.ipynb_checkpoints/: preprocessing-checkpoint.ipynb
src/: camera.cpp  camera.hpp  libs.h  main.cpp  objloader.cpp  objloader.hpp  pcobject.cpp  pcobject.hpp  shaderprogram.cpp  shaderprogram.hpp  texture.hpp
src/glsl/: fragment_core.glsl  object_fs.glsl  object_vs.glsl  vertex_core.glsl
